<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Promo">
    <Toolbar
        android:id="@+id/mytoolbar_promo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:elevation="2dp"
        android:background="@color/white"
        >
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            >
            <ImageView
                android:id="@+id/back_btn_promo"
                android:layout_marginStart="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/back_button"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="20dp"
                />
            <TextView
                android:text="Promo"
                android:paddingTop="5dp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>
    </Toolbar>
    <LinearLayout
        android:layout_below="@id/mytoolbar_promo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        >
        <ImageView
            android:layout_width="108dp"
            android:layout_height="167dp"
            android:background="@drawable/book_1"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center_vertical"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:text="@string/the_tale_of_monster_falls"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:textStyle="bold"
                android:text="By Yael Almari"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:text="Ini kode diskon buku buat kamu"
                />
                <Button
                    android:id="@+id/promo_1"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:text="@string/bacabukucerita"
                    android:textIsSelectable="true"
                    android:textAllCaps="false"
                    android:background="@drawable/promo_btn2"
                    android:stateListAnimator="@null"
                    android:textSize="15sp"
                    />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                >
                <Button
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rp_120_000"
                    android:backgroundTint="@color/main_col"
                    android:textSize="13sp"
                    android:textColor="@color/white"
                    android:stateListAnimator="@null"
                    android:layout_marginEnd="10dp"
                    />
                <Button
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="Rp 70.000"
                    android:stateListAnimator="@null"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:backgroundTint="@color/main_col"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
        <View
           android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@drawable/toolbar_dropshadow"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="20dp"
            >
            <ImageView
                android:layout_width="108dp"
                android:layout_height="167dp"
                android:background="@drawable/book_5"
                android:layout_marginEnd="8dp"
                android:layout_gravity="center_vertical"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:text="The Beauty of The Night"
                    android:textSize="18sp"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:text="By Heri Mark"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="textStart"
                    android:text="Ini kode diskon buku buat kamu"
                    />
                <Button
                    android:id="@+id/promo_2"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:text="@string/bacabukupetualangan"
                    android:textAllCaps="false"
                    android:background="@drawable/promo_btn2"
                    android:stateListAnimator="@null"
                    android:textIsSelectable="true"
                    android:textSize="15sp"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"
                    >
                    <Button
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="@string/rp_100_000"
                        android:backgroundTint="@color/main_col"
                        android:textSize="13sp"
                        android:layout_marginEnd="5dp"
                        android:stateListAnimator="@null"
                        android:textColor="@color/white"
                        />
                    <Button
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:text="Rp 80.000"
                        android:textSize="13sp"
                        android:textColor="@color/white"
                        android:stateListAnimator="@null"
                        android:backgroundTint="@color/main_col"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>