<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyBook"
    android:background="@color/white"
    >
    <Toolbar
        android:id="@+id/mybook_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:elevation="2dp"
        android:background="@color/white"
        >
        <RelativeLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="My Book"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginEnd="20dp"
                />
        </RelativeLayout>
    </Toolbar>
    <View
        android:id="@+id/shadow_toolbar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/mybook_toolbar"
        android:background="@drawable/toolbar_dropshadow"
        />
    <RelativeLayout
        android:id="@+id/rv_mybook"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarThumbVertical="@null"
        >
          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
              android:paddingTop="77dp"
              android:paddingBottom="40dp"
              >
                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="95dp"
                    android:layout_height="150dp"
                    android:background="@drawable/book_1"
                    android:layout_marginEnd="8dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/the_tale_of_monster_falls"
                        android:textSize="18sp"
                        android:textStyle="bold"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:text="@string/yael_almari"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:text="@string/cerita_fiksi_yang_melibatkan_kehadiran_atau_petualangan_monster_dalam_suasana_jatuh_atau_sekitar_alam_yang_magis_mengikuti_perjalanan_protagonis_atau_karakter_karakter_lain_dalam_menghadapai_monster"
                        />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Baca Sekarang"
                        android:textAllCaps="false"
                        android:backgroundTint="@color/main_col"
                        android:textColor="@color/white"
                        android:stateListAnimator="@null"
                        />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Hapus Buku"
                        android:textAllCaps="false"
                        android:backgroundTint="@color/main_col"
                        android:textColor="@color/white"
                        android:stateListAnimator="@null"
                        />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
              <View
                  android:layout_marginTop="10dp"
                  android:layout_width="match_parent"
                  android:layout_height="0.5dp"
                  android:background="@drawable/toolbar_dropshadow"
                  android:layout_marginBottom="10dp"
                  />
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="horizontal"

                  >
                  <ImageView
                      android:layout_width="95dp"
                      android:layout_height="150dp"
                      android:background="@drawable/book_4"
                      android:layout_marginEnd="8dp"
                      />
                  <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      >
                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="Two Side"
                          android:textSize="18sp"
                          android:textStyle="bold"/>
                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textSize="13sp"
                          android:textStyle="bold"
                          android:text="Pedro Fernandes"
                          />
                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textAlignment="textStart"
                          android:text="Buku yang menceritakan tentang perjalanan seorang individu yang berjuang untuk menemukan keseimbangan antara dua sisi yang bertentangan dalam dirinya, menghadapi tantangan dan pencarian jati diri."
                          />
                      <LinearLayout
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">
                          <Button
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="Baca Sekarang"
                              android:textAllCaps="false"
                              android:backgroundTint="@color/main_col"
                              android:textColor="@color/white"
                              android:stateListAnimator="@null"

                              />
                          <Button
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="Hapus Buku"
                              android:textAllCaps="false"
                              android:backgroundTint="@color/main_col"
                              android:textColor="@color/white"
                              android:stateListAnimator="@null"

                              />
                      </LinearLayout>
                  </LinearLayout>
              </LinearLayout>
              <View
                  android:layout_marginTop="10dp"
                  android:layout_width="match_parent"
                  android:layout_height="0.5dp"
                  android:background="@drawable/toolbar_dropshadow"
                  android:layout_marginBottom="10dp"
                  />
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="horizontal"

                  >
                  <ImageView
                      android:layout_width="95dp"
                      android:layout_height="150dp"
                      android:background="@drawable/book_3"
                      android:layout_marginEnd="8dp"
                      />
                  <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      >
                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="Theory of Happiness"
                          android:textSize="18sp"
                          android:textStyle="bold"/>
                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textSize="13sp"
                          android:textStyle="bold"
                          android:text="Donna Stroupe"
                          />
                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textAlignment="textStart"
                          android:text="Menjelajahi konsep kebahagiaan dan menyajikan teori yang mendalam tentang cara mencapai kebahagiaan yang abadi dan menenangkan dalam kehidupan kita."
                          />
                      <LinearLayout
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">
                          <Button
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="Baca Sekarang"
                              android:textAllCaps="false"
                              android:backgroundTint="@color/main_col"
                              android:textColor="@color/white"
                              android:stateListAnimator="@null"
                              />
                          <Button
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="Hapus Buku"
                              android:textAllCaps="false"
                              android:backgroundTint="@color/main_col"
                              android:textColor="@color/white"
                              android:stateListAnimator="@null"
                              />
                      </LinearLayout>
                  </LinearLayout>
              </LinearLayout>
              <View
                  android:layout_marginTop="10dp"
                  android:layout_width="match_parent"
                  android:layout_height="0.5dp"
                  android:background="@drawable/toolbar_dropshadow"
                  android:layout_marginBottom="10dp"
                  />
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="horizontal"

                  >
                  <ImageView
                      android:layout_width="95dp"
                      android:layout_height="150dp"
                      android:background="@drawable/book_2"
                      android:layout_marginEnd="8dp"
                      />
                  <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      >
                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="Other Side the Lonely World"
                          android:textAlignment="textStart"
                          android:textSize="18sp"
                          android:textStyle="bold"/>
                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textSize="13sp"
                          android:textStyle="bold"
                          android:text="Connor Hammilton"
                          />
                      <TextView
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:textAlignment="textStart"
                          android:text="Mmperkenalkan pembaca pada realitas yang tersembunyi di balik dunia kita yang tampaknya biasa namun, ada sesuatu misteri yang besar."
                          />
                      <LinearLayout
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal">
                          <Button
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="Baca Sekarang"
                              android:textAllCaps="false"
                              android:backgroundTint="@color/main_col"
                              android:textColor="@color/white"
                              />
                          <Button
                              android:layout_width="wrap_content"
                              android:layout_height="wrap_content"
                              android:text="Hapus Buku"
                              android:textAllCaps="false"
                              android:backgroundTint="@color/main_col"
                              android:textColor="@color/white"
                              />
                      </LinearLayout>
                  </LinearLayout>
              </LinearLayout>
              <View
                  android:layout_marginTop="10dp"
                  android:layout_width="match_parent"
                  android:layout_height="0.5dp"
                  android:background="@drawable/toolbar_dropshadow"
                  android:layout_marginBottom="10dp"
                  />
          </LinearLayout>
    </ScrollView>
    </RelativeLayout>





    <LinearLayout
        android:elevation="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingTop="7dp"
        android:paddingBottom="5dp"
        android:background="@color/white"
        android:gravity="center_horizontal"
        >
        <LinearLayout
            android:id="@+id/home_icon_bar"
            android:layout_marginEnd="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bar1_home"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Home"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/mybook_icon"
            android:layout_marginEnd="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bar2_mybook_blue"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="MyBook"
                android:textColor="@color/main_col"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/cart_icon"
            android:layout_marginEnd="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bar3_cart"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Cart"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/profil_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bar3_profil"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="About"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>